# DiligentTools

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  ConfiurationNotes.txt  README.md  appveyor.yml
.github/: .codespellignore
Archiver/: CMakeLists.txt
Archiver/include/: Comporators.hpp  DeviceObjectReflection.hpp  EngineEnvironment.hpp  Generated_BlendState.hpp  Generated_Common.hpp  Generated_DepthStencilState.hpp  Generated_GraphicsTypes.hpp  Generated_InputLayout.hpp  Generated_PipelineResourceSignature.hpp  Generated_PipelineState.hpp  Generated_RasterizerState.hpp  Generated_RenderPass.hpp  Generated_Sampler.hpp  Generated_Shader.hpp  pch.h
Archiver/interface/: DeviceObjectDescriptionParser.h
Archiver/scripts/: cxx_builder.py  cxx_config.py  cxx_generator.py  cxx_parser.py  cxx_template.py
Archiver/src/: Archiver.cpp  DeviceObjectReflection.cpp  EngineEnvironment.cpp
AssetLoader/: CMakeLists.txt  README.md
AssetLoader/interface/: DXSDKMeshLoader.h  DXSDKMeshLoader.hpp  GLTFBuilder.hpp  GLTFDocument.hpp  GLTFLoader.h  GLTFLoader.hpp  GLTFResourceManager.hpp  GLTFUtilities.hpp  GLTFVertexDataConverter.hpp  TinyGltfModelView.hpp
AssetLoader/src/: DXSDKMeshLoader.cpp  GLTFBuilder.cpp  GLTFDocument.cpp  GLTFLoader.cpp  GLTFResourceManager.cpp  GLTFUtilities.cpp  GLTFVertexDataConverter.cpp
HLSL2GLSLConverter/: CMakeLists.txt
HLSL2GLSLConverter/src/: HLSL2GLSLConverterApp.cpp  HLSL2GLSLConverterApp.h  HLSL2GLSLConverterAppLinux.cpp  HLSL2GLSLConverterAppMacOS.cpp  HLSL2GLSLConverterAppWin32.cpp
HLSL2GLSLConverter/testshaders/: ConverterTest.fx  IncludeTest.fxh  TessTestDX.dsh  TessTestDX.hsh  TessTestTriDX.dsh  TessTestTriDX.hsh
HLSL2GLSLConverter/testshaders/IncludeDir1/: CommonShaderStructs.h
HLSL2GLSLConverter/testshaders/IncludeDir2/: TestInclude.h
Imgui/: CMakeLists.txt
Imgui/interface/: ImGuiDiligentConfig.h  ImGuiDiligentRenderer.hpp  ImGuiImplAndroid.h  ImGuiImplAndroid.hpp  ImGuiImplDiligent.h  ImGuiImplDiligent.hpp  ImGuiImplEmscripten.hpp  ImGuiImplIOS.h  ImGuiImplIOS.hpp  ImGuiImplLinux.h  ImGuiImplLinuxX11.h  ImGuiImplLinuxX11.hpp  ImGuiImplLinuxXCB.h  ImGuiImplLinuxXCB.hpp  ImGuiImplMacOS.h  ImGuiImplMacOS.hpp  ImGuiImplSDL.hpp  ImGuiImplSDL2.hpp  ImGuiImplSDL3.hpp  ImGuiImplTVOS.hpp  ImGuiImplUWP.h  ImGuiImplUWP.hpp  ImGuiImplWin32.h  ImGuiImplWin32.hpp  ImGuiUtils.h  ImGuiUtils.hpp
Imgui/src/: ImGuiDiligentFileIO.cpp  ImGuiDiligentRenderer.cpp  ImGuiImplAndroid.cpp  ImGuiImplDiligent.cpp  ImGuiImplEmscripten.cpp  ImGuiImplIOS.mm  ImGuiImplLinux.cpp  ImGuiImplLinuxX11.cpp  ImGuiImplLinuxXCB.cpp  ImGuiImplMacOS.mm  ImGuiImplSDL.cpp  ImGuiImplSDL2.cpp  ImGuiImplSDL3.cpp  ImGuiImplTVOS.mm  ImGuiImplUWP.cpp  ImGuiImplWin32.cpp  ImGuiUtils.cpp
NativeApp/Android/ndk_helper/: CMakeLists.txt
NativeApp/Linux/: CMakeLists.txt
RenderScript/: CMakeLists.txt
RenderScript/include/: BlendStateDescParser.h  BlendStateParser.h  BufferParser.h  BufferViewParser.h  ClassMethodBinding.h  ConvenienceFunctions.h  Debug.h  DepthStencilStateDescParser.h  DepthStencilStateParser.h  DeviceContextFuncBindings.h  DrawAttribsParser.h  EngineObjectParserBase.h  EngineObjectParserCommon.h  EnumMappings.h  InputLayoutDescParser.h  LayoutDescParser.h  LuaBindings.h  LuaFunctionBinding.h  LuaWrappers.h  PSODescParser.h  ParsingErrors.h  RasterizerStateDescParser.h  RasterizerStateParser.h  ResourceMappingParser.h  SamplerParser.h  ScissorRectParser.h  ScriptParser.h  ShaderParser.h  ShaderResourceBindingParser.h  ShaderVariableParser.h  TextureParser.h  TextureViewParser.h  ViewportParser.h  pch.h
RenderScript/src/: BlendStateDescParser.cpp  BlendStateParser.cpp  BufferParser.cpp  BufferViewParser.cpp  DepthStencilStateDescParser.cpp  DepthStencilStateParser.cpp  DeviceContextFuncBindings.cpp  DrawAttribsParser.cpp  EngineObjectParserBase.cpp  EnumMappings.cpp  InputLayoutDescParser.cpp  LayoutDescParser.cpp  LuaBindings.cpp  LuaFunctionBinding.cpp  LuaWrappers.cpp  PSODescParser.cpp  ParsingErrors.cpp  RasterizerStateDescParser.cpp  RasterizerStateParser.cpp  ResourceMappingParser.cpp  SamplerParser.cpp  ScissorRectParser.cpp  ScriptParser.cpp  ShaderParser.cpp  ShaderResourceBindingParser.cpp  ShaderVariableParser.cpp  TextureParser.cpp  TextureViewParser.cpp  ViewportParser.cpp
RenderStateNotation/: CMakeLists.txt
RenderStateNotation/include/: RenderStateNotationLoaderImpl.hpp  RenderStateNotationParserImpl.hpp  pch.h
RenderStateNotation/interface/: RenderStateNotationLoader.h  RenderStateNotationParser.h
RenderStateNotation/scripts/: cxx_builder.py  cxx_config.py  cxx_generator.py  cxx_parser.py  cxx_template.py
RenderStateNotation/src/: RenderStateNotationLoaderImpl.cpp  RenderStateNotationParserImpl.cpp
RenderStateNotationParser/: CMakeLists.txt
RenderStateNotationParser/include/: RenderStateNotationParserImpl.hpp  pch.h
RenderStateNotationParser/interface/: RenderStateNotationParser.h
RenderStateNotationParser/scripts/: cxx_config.py  cxx_parser.py  cxx_template.py
RenderStateNotationParser/src/: RenderStateNotationParserImpl.cpp
RenderStatePackager/: CMakeLists.txt  README.md  app.manifest
RenderStatePackager/include/: ParsingEnvironment.hpp  RenderStatePackager.hpp
RenderStatePackager/src/: ParsingEnvironment.cpp  RenderStatePackager.cpp  main.cpp
Tests/DiligentToolsGPUTest/: CMakeLists.txt
Tests/DiligentToolsGPUTest/src/: RenderStateNotationLoaderTest.cpp  RenderStatePackagerGPUTest.cpp  main.cpp
Tests/DiligentToolsTest/: CMakeLists.txt
Tests/DiligentToolsTest/assets/: RenderStatePackagerConfig.json
TextureLoader/: CMakeLists.txt
TextureLoader/include/: DDSLoader.h  JPEGCodec.h  PNGCodec.h  TGACodec.hpp  TextureLoaderImpl.hpp  dxgiformat.h  pch.h
TextureLoader/interface/: BCTools.h  Image.h  Image.hpp  JPEGCodec.h  PNGCodec.h  SGILoader.h  TextureLoader.h  TextureUtilities.h
TextureLoader/src/: BCTools.cpp  DDSLoader.cpp  Image.cpp  JPEGCodec.c  KTXLoader.cpp  PNGCodec.c  SGILoader.cpp  STBImpl.cpp  TGACodec.cpp  TextureLoader.cpp  TextureLoaderImpl.cpp  TextureUtilities.cpp  pch.cpp
(+261 files in other folders)
